test/libyul/yulSyntaxTests/function_literal.yul
{
  function f(a,b) {}
  f(x,1)
}
// ----
// DeclarationError 8198: (27-28): Identifier not found.
